@WIP fix encapsulation